RESOLVED FIXED36701
Fix tests added by https://bugs.webkit.org/show_bug.cgi?id=36675 on Qt Linux and Windows
https://bugs.webkit.org/show_bug.cgi?id=36701
Summary Fix tests added by https://bugs.webkit.org/show_bug.cgi?id=36675 on Qt Linux ...
Robert Hogan
Reported 2010-03-27 07:04:08 PDT
Add support to unix and windows NS plugin for executing scripts on setWindow. Amend plugins/reentrant-update-widget-positions.html to trigger the test in the same way as its companion test update-widgets-crash.html, i.e.: window.addEventListener('load', doTest, false); reentrant-update-widget-positions.html was using: window.addEventListener('load', function() { window.setTimeout(doTest, 0); which on Qt (and apparently Windows judging by the bot) runs the test after onSetWindow has been called. There must be a bug at the bottom of this difference but probably best to treat separately.
Attachments
Patch (8.47 KB, patch)
2010-03-27 07:15 PDT, Robert Hogan
simon.fraser: review+
ap: commit-queue-
Robert Hogan
Comment 1 2010-03-27 07:15:07 PDT
WebKit Review Bot
Comment 2 2010-03-27 07:16:34 PDT
Attachment 51827 [details] did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKitTools/DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:89: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] WebKitTools/DumpRenderTree/win/TestNetscapePlugin/main.cpp:111: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Robert Hogan
Comment 3 2010-03-27 07:19:38 PDT
See https://bugs.webkit.org/show_bug.cgi?id=36702 for tracking the inconsistency in EventListener/setTimeOut.
Robert Hogan
Comment 4 2010-03-27 07:21:06 PDT
(In reply to comment #2) > Attachment 51827 [details] did not pass style-queue: > > Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 > WebKitTools/DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:89: > Tests for true/false, null/non-null, and zero/non-zero should all be done > without equality comparisons. [readability/comparison_to_zero] [5] > WebKitTools/DumpRenderTree/win/TestNetscapePlugin/main.cpp:111: Tests for > true/false, null/non-null, and zero/non-zero should all be done without > equality comparisons. [readability/comparison_to_zero] [5] > Total errors found: 2 in 5 files > > > If any of these errors are false positives, please file a bug against > check-webkit-style. Ignoring these errors as the style is consistent with the rest of the file.
Simon Fraser (smfr)
Comment 5 2010-03-27 08:31:49 PDT
Comment on attachment 51827 [details] Patch > Subject: [PATCH] 2010-03-27 Robert Hogan <robert@webkit.org> > > Reviewed by NOBODY (OOPS!). > > Amend plugins/reentrant-update-widget-positions.html to trigger the test in the > same way as its companion test plugins/update-widgets-crash.html, i.e.: The tests are different for the specific reason that they triggered different bugs. Please leave them as they are. r=me on the plugin code changes.
Alexey Proskuryakov
Comment 6 2010-03-27 11:52:52 PDT
Comment on attachment 51827 [details] Patch Marking cq-, because this patch shouldn't be landed as is.
Eric Seidel (no email)
Comment 7 2010-04-06 23:45:35 PDT
Attachment 51827 [details] was posted by a committer and has review+, assigning to Robert Hogan for commit.
Robert Hogan
Comment 8 2010-04-07 11:49:09 PDT
Landed as r56668.
Note You need to log in before you can comment on or make changes to this bug.