2010-03-27  Robert Hogan  <robert@webkit.org>

Reviewed by Simon Fraser.

        [Qt/Win] Add support to unix and windows NS plugin for executing scripts on setWindow.

        https://bugs.webkit.org/show_bug.cgi?id=36701

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (webkit_test_plugin_new_instance): Add onSetWindow.
        (webkit_test_plugin_destroy_instance): Add onSetWindow.
        (webkit_test_plugin_set_window): Add onSetWindow.
        * DumpRenderTree/win/TestNetscapePlugin/main.cpp:
        (NPP_New): Add onSetWindow.
        (NPP_Destroy): Add onSetWindow.
        (NPP_SetWindow): Add onSetWindow.

2010-03-27  Robert Hogan  <robert@webkit.org>

        Unreviewed skip failing test.

        [Qt] Skip test added in r56646. Tracked by https://bugs.webkit.org/show_bug.cgi?id=36702

        https://bugs.webkit.org/show_bug.cgi?id=36701

        * platform/qt/Skipped: Add plugins/reentrant-update-widget-positions.html

Canonical link: https://commits.webkit.org/47962@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56668 268f45cc-cd09-0410-ab3c-d52691b4dbfc