WebKitTools/DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp
@@ -86,6 +86,8 @@ webkit_test_plugin_new_instance(NPMIMEType /*mimetype*/,
                 obj->testDocumentOpenInDestroyStream = TRUE;
             else if (strcasecmp(argn[i], "testwindowopen") == 0)
                 obj->testWindowOpen = TRUE;
+            else if (strcasecmp(argn[i], "onSetWindow") == 0 && !obj->onSetWindow)
+                obj->onSetWindow = strdup(argv[i]);
         }
 
         browser->getvalue(instance, NPNVprivateModeBool, (void *)&obj->cachedPrivateBrowsingMode);
@@ -116,6 +118,9 @@ webkit_test_plugin_destroy_instance(NPP instance, NPSavedData** /*save*/)
         if (obj->logDestroy)
             pluginLog(instance, "NPP_Destroy");
 
+        if (obj->onSetWindow)
+            free(obj->onSetWindow);
+
         browser->releaseobject(&obj->header);
     }
 
@@ -134,6 +139,8 @@ webkit_test_plugin_set_window(NPP instance, NPWindow *window)
             pluginLog(instance, "NPP_SetWindow: %d %d", (int)window->width, (int)window->height);
             obj->logSetWindow = false;
         }
+        if (obj->onSetWindow)
+            executeScript(obj, obj->onSetWindow);
 
         if (obj->testWindowOpen) {
             testWindowOpen(instance);
